--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,16 @@ body {
     font-size: 20px;
     background-color: black;
 }
+
 html {
-	font-size:70px;
-	background-color: white;
+    font-size: 70px;
+    background-color: white;
+}
+
+* {
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
 }
